# sanitai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  landing.html  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: audit.yml  build-release.yml  ci.yml  release.yml  reproducible-verify.yml
corpora/context/: README.md  index.jsonl  schema.json
crates/sanitai-cli/: Cargo.toml
crates/sanitai-cli/src/: main.rs  sarif.rs
crates/sanitai-cli/tests/: integration.rs  pipe_mode.rs  tui_smoke.rs
crates/sanitai-cli/tests/fixtures/: clean.txt  secrets.jsonl
crates/sanitai-core/: Cargo.toml
crates/sanitai-core/src/: chunk.rs  chunker.rs  config.rs  error.rs  finding.rs  lib.rs  secure.rs  traits.rs  turn.rs
crates/sanitai-core/tests/: properties.rs
crates/sanitai-detectors/: Cargo.toml
crates/sanitai-detectors/src/: context_classifier.rs  cross_turn.rs  keyword_filter.rs  lib.rs  regex_detector.rs  stopwords.rs  transform.rs
crates/sanitai-fixtures/: Cargo.toml
crates/sanitai-fixtures/src/: classes.rs  context.rs  lib.rs
crates/sanitai-parsers/: Cargo.toml
crates/sanitai-parsers/src/: chatgpt.rs  claude.rs  copilot.rs  cursor.rs  discovery.rs  gemini.rs  lib.rs
crates/sanitai-parsers/tests/: test_discover_all.rs  test_gemini_parser.rs
crates/sanitai-parsers/tests/fixtures/: chatgpt_sample.json  gemini_sample.json
crates/sanitai-redactor/: Cargo.toml
crates/sanitai-redactor/src/: lib.rs
crates/sanitai-sandbox/: Cargo.toml
crates/sanitai-sandbox/src/: lib.rs
crates/sanitai-store/: Cargo.toml
crates/sanitai-store/src/: error.rs  lib.rs  models.rs  schema.rs  store.rs
crates/sanitai-store/tests/: store_integration.rs
crates/sanitai-tui/: Cargo.toml
crates/sanitai-tui/src/: app.rs  banner.rs  help.rs  history_screen.rs  layout.rs  lib.rs  menu.rs  nix.rs  nix_tests.rs  open_in_editor.rs  redact_screen.rs  results.rs  scan_runner.rs  settings.rs  suppressions.rs  theme.rs
docs/: CNAME  compliance.md  custom-rules.md  index.html
docs/adr/: 001-language-choice.md  002-model-distribution.md  003-sandbox-approach.md  004-distribution-strategy.md  005-redaction-modes.md  006-config-format.md  007-two-binary-split.md  008-telemetry-policy.md
docs/planning/: implementation-plan.md  qa-plan.md
homebrew-tap/Formula/: sanitai.rb
scripts/: install-hooks.sh
tools/context-eval/: Cargo.toml
tools/context-eval/src/: main.rs
tools/corpus-gen/: Cargo.toml
tools/corpus-gen/src/: main.rs
tools/differential/: Cargo.toml
tools/differential/src/: main.rs
tools/security-lint/: check_no_log_secrets.sh
