[package]
name    = "sanitai-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sanitai"
path = "src/main.rs"

[dependencies]
sanitai-core      = { path = "../sanitai-core" }
sanitai-detectors = { path = "../sanitai-detectors" }
sanitai-parsers   = { path = "../sanitai-parsers" }
sanitai-redactor  = { path = "../sanitai-redactor" }
sanitai-sandbox   = { path = "../sanitai-sandbox" }
clap              = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
dirs-next         = { workspace = true }
walkdir           = { workspace = true }
futures           = { workspace = true }

[dev-dependencies]
sanitai-fixtures = { path = "../sanitai-fixtures" }
tempfile         = { workspace = true }
serde_json       = { workspace = true }
