[package]
name    = "sanitai-sandbox"
version.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
sanitai-core = { path = "../sanitai-core" }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
