[package]
name    = "sanitai-store"
version.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
rusqlite  = { workspace = true }
ulid      = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }
sha2      = { workspace = true }
hmac      = { workspace = true }
hex       = "0.4"
getrandom = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
