[package]
name    = "differential"
version.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

[[bin]]
name = "differential"
path = "src/main.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
